[package]
name = "schedule_sort"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
calamine = "0.30.0"
chrono = "0.4.41"
rust_xlsxwriter = { version = "0.90.0", features = ["chrono"] }
serde = { version = "1.0.219", features = ["derive"] }

[build-dependencies]
embed-resource = "3.0"
